# JAXTrace

./: .gitignore  FEM_STATUS.md  LICENSE  README.md  README_FEM.md  STRUCTURE.md  USAGE.md  check_smoke.py  check_struture.py  config_example.py  example_workflow.py  example_workflow2.py  example_workflow_clean.py  example_workflow_fast.py  example_workflow_fem.py  example_workflow_minimal.py  example_workflow_octree_fem_optimized.py  memory_report_20250930_104604.json  memory_report_20250930_112946.json  memory_report_20250930_120748.json  memory_report_20250930_124507.json  memory_report_20251001_113107.json  memory_report_20251001_124656.json  memory_tracking_detailed.json  optimized_particle_advection.py  package_structure.txt  particle_advection.ipynb  particle_advection.py  particle_visualizer.py  pyproject.toml  requirements.txt  run.py  setup.py  test_gpu_memory.py  test_memory_tracking.json  tutorial_config.json  tutorial_notebook.ipynb  vtk_velocity_reader.py
archive/: README.md
example_data/: 003_caseCoarse_158.pvtu  003_caseCoarse_158_0.vtu  003_caseCoarse_158_1.vtu  003_caseCoarse_158_2.vtu  003_caseCoarse_158_3.vtu  003_caseCoarse_158_4.vtu  003_caseCoarse_158_5.vtu  003_caseCoarse_159.pvtu  003_caseCoarse_159_0.vtu  003_caseCoarse_159_1.vtu  003_caseCoarse_159_2.vtu  003_caseCoarse_159_3.vtu  003_caseCoarse_159_4.vtu  003_caseCoarse_159_5.vtu
examples/: tutorial_notebook.ipynb
jaxtrace/: __init__.py  __init__.txt  __main__.py  density.py  exporter.txt  reader.py  tracker.py  tracker.txt  utils.py  utils.txt  visualizer.py  visualizer.txt
jaxtrace_enhanced_output/: analysis_summary.txt  enhanced_analysis_summary.txt
jaxtrace_output/: analysis_summary.txt
output_directory/: tutorial_results_final.vtp  tutorial_results_initial.vtp
(+157 files in other folders)
