[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "jaxtrace"
version = "0.1.0"
description = "Memory-optimized Lagrangian particle tracking with JAX acceleration"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "JAXTrace Contributors"},
]
keywords = ["particle tracking", "fluid dynamics", "JAX", "CFD", "Lagrangian"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "matplotlib>=3.3.0",
    "seaborn>=0.11.0",
    "vtk>=9.0.0",
    "scipy>=1.7.0",
    "psutil>=5.8.0",
    "jax>=0.4.0",
    "jaxlib>=0.4.0",
]

[project.optional-dependencies]
gpu = [
    "jax[cuda12_pip]",
]
interactive = [
    "plotly>=5.0.0",
    "ipython>=7.0.0",
]
monitoring = [
    "pynvml>=11.0.0",
]
all = [
    "jaxtrace[gpu,interactive,monitoring]",
]

[project.urls]
Homepage = "https://github.com/ARHashemi/JAXTrace"
Repository = "https://github.com/ARHashemi/JAXTrace"
Documentation = "https://github.com/ARHashemi/JAXTrace"

[tool.setuptools.packages.find]
include = ["jaxtrace*"]

[tool.setuptools.package-data]
jaxtrace = ["py.typed"]